--- a/Code/WorkSpeed.DesktopClient/Views/DataTemplates/EmployeeUserControl.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/DataTemplates/EmployeeUserControl.xaml
@@ -4,13 +4,18 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:vm="clr-namespace:WorkSpeed.DesktopClient.ViewModels.EntityViewModels"
+             xmlns:conv="clr-namespace:WorkSpeed.DesktopClient.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              d:DataContext="{d:DesignInstance vm:EmployeeViewModel}"
              FontFamily="{StaticResource font_Rubik}"
-             Width="266" Height="116" Margin="2,5"
+             Width="266" Height="121" Margin="2,5"
              Padding="0"
+             IsHitTestVisible="True"
              >
+    <UserControl.Resources>
+        <conv:ImageConverter x:Key="conv_ImageConverter" />
+    </UserControl.Resources>
     <Border BorderThickness="1" 
             BorderBrush="{StaticResource br_Window.Border}"              
             >
@@ -22,7 +27,7 @@
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="27" />
+                <RowDefinition Height="30" />
                 <RowDefinition Height="18" />
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto" />
@@ -30,7 +35,7 @@
             </Grid.RowDefinitions>
 
             <Image Grid.Row="0" Grid.RowSpan="3" Grid.Column="0" 
-                   Source="{Binding Picture}" 
+                   Source="{Binding Avatar, Converter={StaticResource conv_ImageConverter}}" 
                    Width="50" Height="65"
                    Margin="10,10,10,0"
                    VerticalAlignment="Top"
@@ -42,6 +47,7 @@
                            VerticalAlignment="Bottom"
                            Text="{Binding SecondName}" />
             </Border>
+
             <Border Grid.Row="1" Grid.Column="1">
                 <TextBlock FontSize="12" FontFamily="{StaticResource font_RubikLight}"
                            HorizontalAlignment="Left"
@@ -58,6 +64,7 @@
 
                 <ComboBox BorderThickness="0" Width="40"
                           ItemsSource="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=Window}, Path=DataContext.Appointments}"
+                          DisplayMemberPath="Name"
                           />
                 <Grid>
                     <Path Data="{StaticResource g_Emblem}"
@@ -73,10 +80,12 @@
                               Margin="5,0" Width="30"
                               HorizontalContentAlignment="Center"
                               ItemsSource="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=Window}, Path=DataContext.Ranks}"
+                              DisplayMemberPath="Number"
                               />
                 </Grid>
                 <ComboBox BorderThickness="0" Width="80"
                           ItemsSource="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=Window}, Path=DataContext.Positions}"
+                          DisplayMemberPath="Name"
                           />
             </StackPanel>
 
@@ -86,10 +95,12 @@
                 <HeaderedContentControl.Header>
                     <Border>
                         <TextBlock FontFamily="{StaticResource font_RubikMedium}" 
-                                                   Text="Смена:" />
+                                   Text="Смена:" />
                     </Border>
                 </HeaderedContentControl.Header>
-                <ComboBox ItemsSource="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=Window}, Path=DataContext.Shifts}" />
+                <ComboBox ItemsSource="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=Window}, Path=DataContext.Shifts}" 
+                          DisplayMemberPath="Name"
+                          />
             </HeaderedContentControl>
 
             <HeaderedContentControl Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3"
@@ -104,8 +115,9 @@
                                                />
                     </Border>
                 </HeaderedContentControl.Header>
-                <ComboBox ItemsSource="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=Window}, Path=DataContext.ShortBreakSchedules}"  >
-                </ComboBox>
+                <ComboBox ItemsSource="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=Window}, Path=DataContext.ShortBreakSchedules}"
+                          DisplayMemberPath="Name"
+                          />
             </HeaderedContentControl>
         </Grid>
     </Border>
