--- a/Code/WorkSpeed.DesktopClient/Resources/Colors.xaml
+++ b/Code/WorkSpeed.DesktopClient/Resources/Colors.xaml
@@ -28,20 +28,21 @@
     <Color x:Key="col_Window.GlowLight.Bottom">#ffffff</Color>
 
 
-    <Color x:Key="col_Window.Control.Background">#cfcfcf</Color>
-    <Color x:Key="col_Window.Control.BackgroundMouseOver">#c0c0c0</Color>
-    <Color x:Key="col_Window.Control.Foreground">#404040</Color>
-    <Color x:Key="col_Window.Control.ForegroundAlternative">#e0e0e0</Color>
-    <Color x:Key="col_Window.Control.BackgroundAlternative">#4d4d4d</Color>
-    <Color x:Key="col_Window.Button.Pressed.Background">#4a8fff</Color>
+    <Color x:Key="col_Control.Background">#cfcfcf</Color>
+    <Color x:Key="col_Control.BackgroundMouseOver">#c0c0c0</Color>
+    <Color x:Key="col_Control.Foreground">#404040</Color>
+    <Color x:Key="col_Control.ForegroundAlternative">#e0e0e0</Color>
+    <Color x:Key="col_Control.BackgroundAlternative">#4d4d4d</Color>
+
+    <Color x:Key="col_Button.Pressed.Background">#4a8fff</Color>
 
     <SolidColorBrush x:Key="br_Window.Background" Color="{StaticResource col_Window.Background}" />
     <SolidColorBrush x:Key="br_Window.Border" Color="{DynamicResource col_Window.Border }" />
     <SolidColorBrush x:Key="br_Window.Foreground" Color="{DynamicResource col_Window.Foreground }" />
-    <SolidColorBrush x:Key="br_Window.Control.Background" Color="{DynamicResource col_Window.Control.Background }" />
-    <SolidColorBrush x:Key="br_Window.Control.BackgroundAlternative" Color="{DynamicResource col_Window.Control.BackgroundAlternative }" />
-    <SolidColorBrush x:Key="br_Window.Control.Foreground" Color="{DynamicResource col_Window.Control.Foreground }" />
-    <SolidColorBrush x:Key="br_Window.Control.ForegroundAlternative" Color="{DynamicResource col_Window.Control.ForegroundAlternative }" />
+    <SolidColorBrush x:Key="br_Control.Background" Color="{DynamicResource col_Control.Background }" />
+    <SolidColorBrush x:Key="br_Control.BackgroundAlternative" Color="{DynamicResource col_Control.BackgroundAlternative }" />
+    <SolidColorBrush x:Key="br_Control.Foreground" Color="{DynamicResource col_Control.Foreground }" />
+    <SolidColorBrush x:Key="br_Control.ForegroundAlternative" Color="{DynamicResource col_Control.ForegroundAlternative }" />
 
     <LinearGradientBrush x:Key="br_Window.Border.InnerGlow" StartPoint=".372,0" EndPoint=".638,1" x:Shared="False">
         <GradientStop Color="{DynamicResource col_Window.GlowLight.Top}" Offset="0.49" />
