--- a/Code/WorkSpeed.DesktopClient/Resources/Window/ButtonStyles.xaml
+++ b/Code/WorkSpeed.DesktopClient/Resources/Window/ButtonStyles.xaml
@@ -6,7 +6,7 @@
             <ColorAnimationUsingKeyFrames Duration="0:0:0.2" 
                                           Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)" 
                                           >
-                <EasingColorKeyFrame Value="{StaticResource col_Window.Control.BackgroundAlternative}">
+                <EasingColorKeyFrame Value="{StaticResource col_Control.BackgroundAlternative}">
                     <EasingColorKeyFrame.EasingFunction>
                         <PowerEase EasingMode="EaseOut" />
                     </EasingColorKeyFrame.EasingFunction>
@@ -15,7 +15,7 @@
             <ColorAnimationUsingKeyFrames Duration="0:0:0.2" 
                                           Storyboard.TargetProperty="(Control.Foreground).(SolidColorBrush.Color)" 
                                           >
-                <EasingColorKeyFrame Value="{StaticResource col_Window.Control.ForegroundAlternative}">
+                <EasingColorKeyFrame Value="{StaticResource col_Control.ForegroundAlternative}">
                     <EasingColorKeyFrame.EasingFunction>
                         <PowerEase EasingMode="EaseOut" />
                     </EasingColorKeyFrame.EasingFunction>
@@ -27,7 +27,7 @@
         <ColorAnimationUsingKeyFrames Duration="0:0:0.1" 
                                         Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)" 
                                         >
-            <EasingColorKeyFrame Value="{StaticResource col_Window.Button.Pressed.Background}">
+            <EasingColorKeyFrame Value="{StaticResource col_Button.Pressed.Background}">
                 <EasingColorKeyFrame.EasingFunction>
                     <PowerEase EasingMode="EaseOut" />
                 </EasingColorKeyFrame.EasingFunction>
@@ -36,7 +36,7 @@
         <ColorAnimationUsingKeyFrames Duration="0:0:0.2" 
                                         Storyboard.TargetProperty="(Control.Foreground).(SolidColorBrush.Color)" 
                                         >
-            <EasingColorKeyFrame Value="{StaticResource col_Window.Control.ForegroundAlternative}">
+            <EasingColorKeyFrame Value="{StaticResource col_Control.ForegroundAlternative}">
                 <EasingColorKeyFrame.EasingFunction>
                     <PowerEase EasingMode="EaseOut" />
                 </EasingColorKeyFrame.EasingFunction>
@@ -52,8 +52,8 @@
         <Setter Property="Padding" Value="1" />
         <Setter Property="HorizontalContentAlignment" Value="Center" />
         <Setter Property="VerticalContentAlignment" Value="Bottom" />
-        <Setter Property="Background" Value="{StaticResource br_Window.Control.Background}"/>
-        <Setter Property="Foreground" Value="{StaticResource br_Window.Control.Foreground}"/>
+        <Setter Property="Background" Value="{StaticResource br_Control.Background}"/>
+        <Setter Property="Foreground" Value="{StaticResource br_Control.Foreground}"/>
         <Setter Property="RenderTransform" Value="1,0,0,1,0,0" />
         <Setter Property="SnapsToDevicePixels" Value="True" />
         <Setter Property="Border.CornerRadius" Value="0,0,0,3" />
