--- a/Experiments/CircleDiagramTest/Views/Productivity/ProductivityUserControl.xaml
+++ b/Experiments/CircleDiagramTest/Views/Productivity/ProductivityUserControl.xaml
@@ -36,7 +36,7 @@
             </ListBox>
         </Grid>
 
-        <!--<ListBox Grid.Row="1" ItemsSource="{Binding EmployeeProductivityVms}" />-->
+        <ListBox Grid.Row="1" ItemsSource="{Binding EmployeeProductivityVms}" />
 
     </Grid>
 </UserControl>
