--- a/Experiments/CircleDiagramTest/Views/Entities/EmployeeView.xaml
+++ b/Experiments/CircleDiagramTest/Views/Entities/EmployeeView.xaml
@@ -1,4 +1,4 @@
-﻿<Grid x:Class="CircleDiagramTest.Views.Entities.EmployeeView"
+﻿<Border x:Class="CircleDiagramTest.Views.Entities.EmployeeView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,11 +7,12 @@
       mc:Ignorable="d" 
       VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
       SnapsToDevicePixels="True"
+        BorderThickness="1,0,1,1" BorderBrush="Black"
       >
-    <Border BorderThickness="1,0,1,1" BorderBrush="Black">
+
         <TextBlock Text="{Binding Name}"
                    VerticalAlignment="Center"
                    HorizontalAlignment="Center"
                    />
-    </Border>
-</Grid>
+
+</Border>
